--- a/index.html
+++ b/index.html
@@ -20,18 +20,43 @@
       <div class="owl-carousel owl-theme">
         <div class="item">
           <img src="img/product-1.jpg" alt="Product">
+          <a class="product" href="#">
+            <h4 class="product__name">product</h4>
+            <p class="product__price">14,99 usd/kg</p>
+            <button class="btn product__btn">заказать</button>
+          </a>
         </div>
         <div class="item">
           <img src="img/product-2.jpg" alt="Product">
+          <a class="product" href="#">
+            <h4 class="product__name">product</h4>
+            <p class="product__price">14,99 usd/kg</p>
+            <button class="btn product__btn">заказать</button>
+          </a>
         </div>
         <div class="item">
           <img src="img/product-3.jpg" alt="Product">
+          <a class="product" href="#">
+            <h4 class="product__name">product</h4>
+            <p class="product__price">14,99 usd/kg</p>
+            <button class="btn product__btn">заказать</button>
+          </a>
         </div>
         <div class="item">
           <img src="img/product-4.jpg" alt="Product">
+          <a class="product" href="#">
+            <h4 class="product__name">product</h4>
+            <p class="product__price">14,99 usd/kg</p>
+            <button class="btn product__btn">заказать</button>
+          </a>
         </div>
         <div class="item">
           <img src="img/product-4.jpg" alt="Product">
+          <a class="product" href="#">
+            <h4 class="product__name">product</h4>
+            <p class="product__price">14,99 usd/kg</p>
+            <button class="btn product__btn">заказать</button>
+          </a>
         </div>
       </div>
     </section>
@@ -43,27 +68,35 @@
       <div class="row">
         <div class="col-md-4">
           <div class="partnership__img">
-            <img src="" alt="">
+            <svg class="partnership__icon" width="90" height="90">
+              <use xlink:href="#pan"/>
+            </svg>
           </div>
-          <h3>Lorem ipsum.</h3>
+          <h3 class="title title--center title--size">Prepared</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium architecto totam doloribus impedit minima in ab ut magni quae vitae repudiandae, odit nesciunt cumque quidem eos, optio commodi doloremque aliquid.</p>
         </div>
         <div class="col-md-4">
           <div class="partnership__img">
-            <img src="" alt="">
+            <svg class="partnership__icon" width="90" height="90">
+              <use xlink:href="#steak"/>
+            </svg>
           </div>
-          <h3>Lorem ipsum.</h3>
+          <h3 class="title title--center title--size">Sale</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi nisi illum sapiente voluptatibus quis excepturi reprehenderit autem velit laudantium, voluptatum, amet quas repellendus enim, praesentium consectetur suscipit eum alias magnam?</p>
         </div>
         <div class="col-md-4">
           <div class="partnership__img">
-            <img src="" alt="">
+            <svg class="partnership__icon" width="90" height="90">
+              <use xlink:href="#delivery-truck"/>
+            </svg>
           </div>
-          <h3>Lorem ipsum.</h3>
+          <h3 class="title title--center title--size">Delivery</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A repellendus doloremque maiores debitis ex perspiciatis, eaque magni quia, harum, dignissimos consectetur voluptate. Quam nulla et, quis dolorem. Ad, cupiditate obcaecati!</p>
         </div>
       </div>
     </section>
   </div>
-
-@@include('_include/footer.html')
+  <div class="map">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2487.1989227652775!2d5.979071699376088!3d51.436140593008986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c74747ff060f2d%3A0xf57818af5d5f6f45!2sNusseleinstraat+6%2C+5966+NJ+America%2C+Netherlands!5e0!3m2!1sen!2sru!4v1508905895168" width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
+  </div>
+  @@include('_include/footer.html')
